--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "name": ""
   },
   "dependencies": {
-    "express": "4.16.2",
-    "path": "0.12.7",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
-    "ts-loader": "4.0.1",
-    "typescript": "2.7.2",
-    "webpack": "4.1.1",
-    "webpack-cli": "2.0.11"
+    "express": "~4.16.3",
+    "path": "~0.12.7",
+    "react": "~16.4.2",
+    "react-dom": "~16.4.2",
+    "ts-loader": "~4.5.0",
+    "typescript": "~2.9.2",
+    "webpack": "~4.17.1",
+    "webpack-cli": "~2.1.5"
   }
 }
