--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "typescript": "~2.9.2",
     "webpack": "~4.17.1",
     "webpack-cli": "~2.1.5"
+  },
+  "scripts": {
+    "js": "node_modules\\.bin\\webpack app.tsx --config webpack-config.js",
+    "build": "npm run js"
   }
 }
